--- a/AMIL_codes/run_amil.ipynb
+++ b/AMIL_codes/run_amil.ipynb
@@ -10,22 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Package                       Version"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\benjamin\\anaconda3\\envs\\ami_3_7\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\benjamin\\anaconda3\\envs\\ami_3_7\\lib\\site-packages)"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "Package                       Version\n",
       "----------------------------- -----------\n",
       "absl-py                       0.7.0\n",
       "anyio                         3.6.2\n",
@@ -47,7 +32,23 @@
       "colorama                      0.4.6\n",
       "cryptography                  37.0.4\n",
       "cycler                        0.10.0\n",
-      "debugpy                       1.5.1\n",
+      "debugpy                       1.5.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -illow (d:\\programme\\anaconda_envs\\ami_3_7\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (d:\\programme\\anaconda_envs\\ami_3_7\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (d:\\programme\\anaconda_envs\\ami_3_7\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (d:\\programme\\anaconda_envs\\ami_3_7\\lib\\site-packages)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "decorator                     5.1.1\n",
       "defusedxml                    0.7.1\n",
       "entrypoints                   0.4\n",
@@ -92,9 +93,10 @@
       "nbconvert                     7.2.7\n",
       "nbformat                      5.7.1\n",
       "nest-asyncio                  1.5.5\n",
+      "networkx                      2.6.3\n",
       "notebook                      6.5.2\n",
       "notebook_shim                 0.2.2\n",
-      "numpy                         1.15.0\n",
+      "numpy                         1.21.6\n",
       "opencv-python                 4.0.0.21\n",
       "openslide-python              1.2.0\n",
       "packaging                     22.0\n",
@@ -116,11 +118,12 @@
       "PySocks                       1.7.1\n",
       "python-dateutil               2.7.4\n",
       "pytz                          2018.6\n",
+      "PyWavelets                    1.3.0\n",
       "pywin32                       302\n",
       "pywinpty                      2.0.2\n",
       "pyzmq                         22.3.0\n",
       "requests                      2.28.1\n",
-      "scipy                         1.2.2\n",
+      "scipy                         1.7.3\n",
       "Send2Trash                    1.8.0\n",
       "setuptools                    65.5.0\n",
       "six                           1.11.0\n",
@@ -133,6 +136,7 @@
       "tensorflow-estimator          1.13.0\n",
       "termcolor                     1.1.0\n",
       "terminado                     0.15.0\n",
+      "tifffile                      2021.11.2\n",
       "tinycss2                      1.2.1\n",
       "tomli                         2.0.1\n",
       "torch                         1.13.1\n",
@@ -153,15 +157,6 @@
       "wrapt                         1.14.1\n",
       "zipp                          3.11.0\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\benjamin\\anaconda3\\envs\\ami_3_7\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\benjamin\\anaconda3\\envs\\ami_3_7\\lib\\site-packages)\n"
-     ]
     }
    ],
    "source": [
@@ -170,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f43b171b-c610-4852-a072-2b7fa9e0e3ce",
    "metadata": {},
    "outputs": [
@@ -190,8 +185,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ab77195-ce30-4c5d-aabf-42ef91e325e8",
+   "metadata": {},
+   "source": [
+    "## Check Cuda support"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "7924492d-4600-46fa-a473-fc4fd8a5523e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch is using cuda. Hooray!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "try:\n",
+    "    torch.zeros(1).cuda()  # https://stackoverflow.com/a/61034368/6038463\n",
+    "    print(\"torch is using cuda. Hooray!\")\n",
+    "except AssertionError:\n",
+    "    print(\n",
+    "        f\"torch might not be compiled with cuda support: torch.version={torch.version}, torch.version.cuda={torch.version.cuda}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "0e2f2e93-acb1-4e95-a609-e20eaa1c9cc0",
    "metadata": {},
    "outputs": [],
@@ -201,25 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9dc73017-53f0-491d-b96a-b00355e0c4d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "[10 11 12 13 14]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "0e847263-878a-4420-bc58-92b24268502f",
+   "id": "0c634831-061b-4fbd-a4e2-b1fb21699415",
    "metadata": {},
    "outputs": [],
    "source": []
